--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "homepage": "https://www.electronjs.org",
   "scripts": {
     "initialization":"node ./src/renderer/src/assets/js-plugin/meshwriter/index.js",
+    "vite":"vite",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
