--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "example.com",
   "homepage": "https://www.electronjs.org",
   "scripts": {
-    "initialization":"node ./src/renderer/src/assets/js-plugin/meshwriter/index.js",
-    "vite":"vite",
+    "initialization": "node ./src/renderer/src/assets/js-plugin/meshwriter/index.js",
+    "vite": "vite",
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
@@ -24,9 +24,10 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
-    "electron-updater": "^5.3.0",
-    "babylonjs": "^5.8.0",
-    "babylonjs-loaders": "^5.21.0"
+    "babylonjs": "^5.41.0",
+    "babylonjs-loaders": "^5.21.0",
+    "babylonjs-materials": "^5.41.0",
+    "electron-updater": "^5.3.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
