--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.3",
+    "@swc/core": "^1.3.25",
     "@types/node": "16.11.22",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
