--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "babylonjs-inspector": "^5.41.0",
     "babylonjs-loaders": "^5.21.0",
     "babylonjs-materials": "^5.41.0",
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "overlayscrollbars-react": "^0.5.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
