--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babylonjs-loaders": "^5.21.0",
     "babylonjs-materials": "^5.41.0",
     "electron-updater": "^5.3.0",
+    "function-plot": "^1.23.2",
     "overlayscrollbars-react": "^0.5.0"
   },
   "devDependencies": {
