--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babylonjs-materials": "^5.41.0",
     "electron-updater": "^5.3.0",
     "function-plot": "^1.23.2",
+    "mathjs": "^11.7.0",
     "overlayscrollbars-react": "^0.5.0"
   },
   "devDependencies": {
