--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babylonjs-inspector": "^5.41.0",
     "babylonjs-loaders": "^5.21.0",
     "babylonjs-materials": "^5.41.0",
+    "colorjs.io": "^0.4.5",
     "electron-updater": "^5.3.0",
     "function-plot": "^1.23.2",
     "mathjs": "^11.7.0",
