--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^4.9.3",
     "vite": "^3.2.4"
   }
