--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
+  "license": "MIT",
   "homepage": "https://www.electronjs.org",
   "scripts": {
     "initialization": "node ./src/renderer/src/assets/js-plugin/meshwriter/index.js",
