--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
     "build:linux": "electron-vite build && electron-builder --linux --config"
   },
   "dependencies": {
-    "@babylonjs/core": "^6.28.1",
-    "@babylonjs/gui": "^6.28.1",
-    "@babylonjs/gui-editor": "^6.28.1",
-    "@babylonjs/inspector": "^6.28.1",
-    "@babylonjs/loaders": "^6.28.1",
-    "@babylonjs/materials": "^6.28.1",
-    "@babylonjs/serializers": "^6.28.1",
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
     "@swc/core": "^1.3.95",
+    "babylonjs":"^6.28.1",
+    "babylonjs-loaders":"^6.28.1",
+    "babylonjs-gui": "6.28.1",
+    "babylonjs-gui-editor": "6.28.1",
+    "babylonjs-materials": "6.28.1",
+    "babylonjs-serializers": "6.28.1",
+    "babylonjs-inspector": "6.28.1",
     "electron-updater": "^6.1.1"
   },
   "devDependencies": {
