--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@electron-toolkit/utils": "^2.0.0",
     "@swc/core": "^1.3.95",
     "@types/earcut": "^2.1.4",
-    "babylonjs": "^6.28.1",
-    "babylonjs-gui": "6.28.1",
-    "babylonjs-gui-editor": "6.28.1",
-    "babylonjs-inspector": "6.28.1",
-    "babylonjs-loaders": "^6.28.1",
-    "babylonjs-materials": "6.28.1",
-    "babylonjs-serializers": "6.28.1",
+    "babylonjs": "latest",
+    "babylonjs-gui": "latest",
+    "babylonjs-gui-editor": "latest",
+    "babylonjs-inspector": "latest",
+    "babylonjs-loaders": "^latest",
+    "babylonjs-materials": "latest",
+    "babylonjs-serializers": "latest",
     "electron-updater": "^6.1.1"
   },
   "devDependencies": {
