--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
     "@swc/core": "^1.3.95",
+    "@types/color-diff": "^1.2.5",
     "@types/earcut": "^2.1.4",
     "babylonjs": "latest",
     "babylonjs-gui": "latest",
@@ -33,6 +34,7 @@
     "babylonjs-loaders": "^latest",
     "babylonjs-materials": "latest",
     "babylonjs-serializers": "latest",
+    "color-diff": "^1.4.0",
     "electron-updater": "^6.1.1"
   },
   "devDependencies": {
