--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babylonjs-materials": "latest",
     "babylonjs-serializers": "latest",
     "color-diff": "^1.4.0",
+    "colorjs.io": "^0.5.0",
     "electron-updater": "^6.1.1"
   },
   "devDependencies": {
